--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <span class="down">▶</span>
         </span>
         <span>
-            <span class="up">▲</span>
+            <span class="down">▲</span>
             <input type="text" class="y" value="0">
-            <span class="down">▼</span>
+            <span class="up">▼</span>
         </span>
         <span>
             <span class="up">▲</span>
